feat(grpc): add initial support for native interoperability between rust and kotlin